--- a/Delhivery.ipynb
+++ b/Delhivery.ipynb
@@ -85,19 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "788a8fdf-86be-4c8c-a4d7-6ef471d23009",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"delhivery_data.csv\")"
+    "df=pd.read_csv(\"delhivery1.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6860d8c8-bf1b-4000-a097-5419b3a1b6e8",
    "metadata": {
     "tags": []
@@ -151,7 +151,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>training</td>\n",
-       "      <td>35:36.5</td>\n",
+       "      <td>2018-09-20 02:35:36.476840</td>\n",
        "      <td>thanos::sroute:eb7bfc78-b351-4c0e-a951-fa3d5c3...</td>\n",
        "      <td>Carting</td>\n",
        "      <td>trip-153741093647649320</td>\n",
@@ -159,23 +159,23 @@
        "      <td>Anand_VUNagar_DC (Gujarat)</td>\n",
        "      <td>IND388620AAB</td>\n",
        "      <td>Khambhat_MotvdDPP_D (Gujarat)</td>\n",
-       "      <td>21:32.4</td>\n",
+       "      <td>2018-09-20 03:21:32.418600</td>\n",
        "      <td>...</td>\n",
-       "      <td>20/09/2018 4:27</td>\n",
+       "      <td>2018-09-20 04:27:55</td>\n",
        "      <td>10.435660</td>\n",
-       "      <td>14</td>\n",
-       "      <td>11</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>11.9653</td>\n",
        "      <td>1.272727</td>\n",
-       "      <td>14</td>\n",
-       "      <td>11</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>11.9653</td>\n",
        "      <td>1.272727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>training</td>\n",
-       "      <td>35:36.5</td>\n",
+       "      <td>2018-09-20 02:35:36.476840</td>\n",
        "      <td>thanos::sroute:eb7bfc78-b351-4c0e-a951-fa3d5c3...</td>\n",
        "      <td>Carting</td>\n",
        "      <td>trip-153741093647649320</td>\n",
@@ -183,23 +183,23 @@
        "      <td>Anand_VUNagar_DC (Gujarat)</td>\n",
        "      <td>IND388620AAB</td>\n",
        "      <td>Khambhat_MotvdDPP_D (Gujarat)</td>\n",
-       "      <td>21:32.4</td>\n",
+       "      <td>2018-09-20 03:21:32.418600</td>\n",
        "      <td>...</td>\n",
-       "      <td>20/09/2018 4:17</td>\n",
+       "      <td>2018-09-20 04:17:55</td>\n",
        "      <td>18.936842</td>\n",
-       "      <td>24</td>\n",
-       "      <td>20</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>21.7243</td>\n",
        "      <td>1.200000</td>\n",
-       "      <td>10</td>\n",
-       "      <td>9</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>9.7590</td>\n",
        "      <td>1.111111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>training</td>\n",
-       "      <td>35:36.5</td>\n",
+       "      <td>2018-09-20 02:35:36.476840</td>\n",
        "      <td>thanos::sroute:eb7bfc78-b351-4c0e-a951-fa3d5c3...</td>\n",
        "      <td>Carting</td>\n",
        "      <td>trip-153741093647649320</td>\n",
@@ -207,23 +207,23 @@
        "      <td>Anand_VUNagar_DC (Gujarat)</td>\n",
        "      <td>IND388620AAB</td>\n",
        "      <td>Khambhat_MotvdDPP_D (Gujarat)</td>\n",
-       "      <td>21:32.4</td>\n",
+       "      <td>2018-09-20 03:21:32.418600</td>\n",
        "      <td>...</td>\n",
-       "      <td>01:19.5</td>\n",
+       "      <td>2018-09-20 04:01:19.505586</td>\n",
        "      <td>27.637279</td>\n",
-       "      <td>40</td>\n",
-       "      <td>28</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>28.0</td>\n",
        "      <td>32.5395</td>\n",
        "      <td>1.428571</td>\n",
-       "      <td>16</td>\n",
-       "      <td>7</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>10.8152</td>\n",
        "      <td>2.285714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>training</td>\n",
-       "      <td>35:36.5</td>\n",
+       "      <td>2018-09-20 02:35:36.476840</td>\n",
        "      <td>thanos::sroute:eb7bfc78-b351-4c0e-a951-fa3d5c3...</td>\n",
        "      <td>Carting</td>\n",
        "      <td>trip-153741093647649320</td>\n",
@@ -231,23 +231,23 @@
        "      <td>Anand_VUNagar_DC (Gujarat)</td>\n",
        "      <td>IND388620AAB</td>\n",
        "      <td>Khambhat_MotvdDPP_D (Gujarat)</td>\n",
-       "      <td>21:32.4</td>\n",
+       "      <td>2018-09-20 03:21:32.418600</td>\n",
        "      <td>...</td>\n",
-       "      <td>20/09/2018 3:39</td>\n",
+       "      <td>2018-09-20 03:39:57</td>\n",
        "      <td>36.118028</td>\n",
-       "      <td>62</td>\n",
-       "      <td>40</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>40.0</td>\n",
        "      <td>45.5620</td>\n",
        "      <td>1.550000</td>\n",
-       "      <td>21</td>\n",
-       "      <td>12</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>13.0224</td>\n",
        "      <td>1.750000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>training</td>\n",
-       "      <td>35:36.5</td>\n",
+       "      <td>2018-09-20 02:35:36.476840</td>\n",
        "      <td>thanos::sroute:eb7bfc78-b351-4c0e-a951-fa3d5c3...</td>\n",
        "      <td>Carting</td>\n",
        "      <td>trip-153741093647649320</td>\n",
@@ -255,16 +255,16 @@
        "      <td>Anand_VUNagar_DC (Gujarat)</td>\n",
        "      <td>IND388620AAB</td>\n",
        "      <td>Khambhat_MotvdDPP_D (Gujarat)</td>\n",
-       "      <td>21:32.4</td>\n",
+       "      <td>2018-09-20 03:21:32.418600</td>\n",
        "      <td>...</td>\n",
-       "      <td>20/09/2018 3:33</td>\n",
+       "      <td>2018-09-20 03:33:55</td>\n",
        "      <td>39.386040</td>\n",
-       "      <td>68</td>\n",
-       "      <td>44</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>44.0</td>\n",
        "      <td>54.2181</td>\n",
        "      <td>1.545455</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>3.9153</td>\n",
        "      <td>1.200000</td>\n",
        "    </tr>\n",
@@ -274,12 +274,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       data trip_creation_time  \\\n",
-       "0  training            35:36.5   \n",
-       "1  training            35:36.5   \n",
-       "2  training            35:36.5   \n",
-       "3  training            35:36.5   \n",
-       "4  training            35:36.5   \n",
+       "       data          trip_creation_time  \\\n",
+       "0  training  2018-09-20 02:35:36.476840   \n",
+       "1  training  2018-09-20 02:35:36.476840   \n",
+       "2  training  2018-09-20 02:35:36.476840   \n",
+       "3  training  2018-09-20 02:35:36.476840   \n",
+       "4  training  2018-09-20 02:35:36.476840   \n",
        "\n",
        "                                 route_schedule_uuid route_type  \\\n",
        "0  thanos::sroute:eb7bfc78-b351-4c0e-a951-fa3d5c3...    Carting   \n",
@@ -295,38 +295,45 @@
        "3  trip-153741093647649320  IND388121AAA  Anand_VUNagar_DC (Gujarat)   \n",
        "4  trip-153741093647649320  IND388121AAA  Anand_VUNagar_DC (Gujarat)   \n",
        "\n",
-       "  destination_center               destination_name od_start_time  ...  \\\n",
-       "0       IND388620AAB  Khambhat_MotvdDPP_D (Gujarat)       21:32.4  ...   \n",
-       "1       IND388620AAB  Khambhat_MotvdDPP_D (Gujarat)       21:32.4  ...   \n",
-       "2       IND388620AAB  Khambhat_MotvdDPP_D (Gujarat)       21:32.4  ...   \n",
-       "3       IND388620AAB  Khambhat_MotvdDPP_D (Gujarat)       21:32.4  ...   \n",
-       "4       IND388620AAB  Khambhat_MotvdDPP_D (Gujarat)       21:32.4  ...   \n",
+       "  destination_center               destination_name  \\\n",
+       "0       IND388620AAB  Khambhat_MotvdDPP_D (Gujarat)   \n",
+       "1       IND388620AAB  Khambhat_MotvdDPP_D (Gujarat)   \n",
+       "2       IND388620AAB  Khambhat_MotvdDPP_D (Gujarat)   \n",
+       "3       IND388620AAB  Khambhat_MotvdDPP_D (Gujarat)   \n",
+       "4       IND388620AAB  Khambhat_MotvdDPP_D (Gujarat)   \n",
        "\n",
-       "  cutoff_timestamp  actual_distance_to_destination  actual_time  osrm_time  \\\n",
-       "0  20/09/2018 4:27                       10.435660           14         11   \n",
-       "1  20/09/2018 4:17                       18.936842           24         20   \n",
-       "2          01:19.5                       27.637279           40         28   \n",
-       "3  20/09/2018 3:39                       36.118028           62         40   \n",
-       "4  20/09/2018 3:33                       39.386040           68         44   \n",
+       "                od_start_time  ...            cutoff_timestamp  \\\n",
+       "0  2018-09-20 03:21:32.418600  ...         2018-09-20 04:27:55   \n",
+       "1  2018-09-20 03:21:32.418600  ...         2018-09-20 04:17:55   \n",
+       "2  2018-09-20 03:21:32.418600  ...  2018-09-20 04:01:19.505586   \n",
+       "3  2018-09-20 03:21:32.418600  ...         2018-09-20 03:39:57   \n",
+       "4  2018-09-20 03:21:32.418600  ...         2018-09-20 03:33:55   \n",
        "\n",
-       "  osrm_distance    factor  segment_actual_time  segment_osrm_time  \\\n",
-       "0       11.9653  1.272727                   14                 11   \n",
-       "1       21.7243  1.200000                   10                  9   \n",
-       "2       32.5395  1.428571                   16                  7   \n",
-       "3       45.5620  1.550000                   21                 12   \n",
-       "4       54.2181  1.545455                    6                  5   \n",
+       "   actual_distance_to_destination  actual_time  osrm_time osrm_distance  \\\n",
+       "0                       10.435660         14.0       11.0       11.9653   \n",
+       "1                       18.936842         24.0       20.0       21.7243   \n",
+       "2                       27.637279         40.0       28.0       32.5395   \n",
+       "3                       36.118028         62.0       40.0       45.5620   \n",
+       "4                       39.386040         68.0       44.0       54.2181   \n",
        "\n",
-       "   segment_osrm_distance  segment_factor  \n",
-       "0                11.9653        1.272727  \n",
-       "1                 9.7590        1.111111  \n",
-       "2                10.8152        2.285714  \n",
-       "3                13.0224        1.750000  \n",
-       "4                 3.9153        1.200000  \n",
+       "     factor  segment_actual_time  segment_osrm_time  segment_osrm_distance  \\\n",
+       "0  1.272727                 14.0               11.0                11.9653   \n",
+       "1  1.200000                 10.0                9.0                 9.7590   \n",
+       "2  1.428571                 16.0                7.0                10.8152   \n",
+       "3  1.550000                 21.0               12.0                13.0224   \n",
+       "4  1.545455                  6.0                5.0                 3.9153   \n",
+       "\n",
+       "   segment_factor  \n",
+       "0        1.272727  \n",
+       "1        1.111111  \n",
+       "2        2.285714  \n",
+       "3        1.750000  \n",
+       "4        1.200000  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
