--- a/Delhivery.ipynb
+++ b/Delhivery.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d688d981-2694-4892-9ef6-219a8fce4945",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "788a8fdf-86be-4c8c-a4d7-6ef471d23009",
    "metadata": {
     "tags": []
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6860d8c8-bf1b-4000-a097-5419b3a1b6e8",
    "metadata": {
     "tags": []
@@ -315,7 +315,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "dfd0dca6-941e-467d-998f-870b906e5833",
    "metadata": {
     "tags": []
@@ -338,7 +338,7 @@
        "(144867, 24)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,20 +375,20 @@
       " 8   destination_name                144606 non-null  object \n",
       " 9   od_start_time                   144867 non-null  object \n",
       " 10  od_end_time                     144867 non-null  object \n",
-      " 11  start_scan_to_end_scan          144867 non-null  int64  \n",
+      " 11  start_scan_to_end_scan          144867 non-null  float64\n",
       " 12  is_cutoff                       144867 non-null  bool   \n",
       " 13  cutoff_factor                   144867 non-null  int64  \n",
       " 14  cutoff_timestamp                144867 non-null  object \n",
       " 15  actual_distance_to_destination  144867 non-null  float64\n",
-      " 16  actual_time                     144867 non-null  int64  \n",
-      " 17  osrm_time                       144867 non-null  int64  \n",
+      " 16  actual_time                     144867 non-null  float64\n",
+      " 17  osrm_time                       144867 non-null  float64\n",
       " 18  osrm_distance                   144867 non-null  float64\n",
       " 19  factor                          144867 non-null  float64\n",
-      " 20  segment_actual_time             144867 non-null  int64  \n",
-      " 21  segment_osrm_time               144867 non-null  int64  \n",
+      " 20  segment_actual_time             144867 non-null  float64\n",
+      " 21  segment_osrm_time               144867 non-null  float64\n",
       " 22  segment_osrm_distance           144867 non-null  float64\n",
       " 23  segment_factor                  144867 non-null  float64\n",
-      "dtypes: bool(1), float64(5), int64(6), object(12)\n",
+      "dtypes: bool(1), float64(10), int64(1), object(12)\n",
       "memory usage: 25.6+ MB\n"
      ]
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "3096e865-bdbe-41cc-8439-f2ca0bda6df4",
    "metadata": {
     "tags": []
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "fe688a6e-83a2-4d95-bd6f-5d2f5e2ece11",
    "metadata": {
     "tags": []
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "03769a7d-a53a-4fd5-a028-e39e608d727c",
    "metadata": {
     "tags": []
@@ -805,7 +805,7 @@
        "9                 6.0434  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "1dc445fd-afa2-4db5-a1c3-1fbdda086a03",
    "metadata": {
     "tags": []
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "042b4795-80ad-4a02-841c-b0e890437456",
    "metadata": {
     "tags": []
@@ -1221,7 +1221,7 @@
        "9                53.2334  trip-153741093647649320IND388620AABIND388320AAA  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "3feda0cb-b8b0-4772-b073-ce6847fa0722",
    "metadata": {
     "tags": []
@@ -1250,7 +1250,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "629e2451-e59f-45f3-814a-c5034a14114b",
    "metadata": {
     "tags": []
@@ -1291,66 +1291,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "07ed5722-9270-4efa-bf41-3459971becbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "783081e6-cb83-4e21-b6fc-9f99809592f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ae30dc1b-f69a-422f-a555-3a7b09b91fbd",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "DataFrame.sort_values() takes 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m segment_df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39msort_values(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msegment_id\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mactual_time\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msegment_id\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39magg(merge_segment)\u001b[38;5;241m.\u001b[39mreset_index()\n\u001b[0;32m      2\u001b[0m segment_df\u001b[38;5;241m.\u001b[39mhead()\n",
-      "\u001b[1;31mTypeError\u001b[0m: DataFrame.sort_values() takes 2 positional arguments but 3 were given"
-     ]
-    }
-   ],
-   "source": [
-    "segment_df = df.sort_values('segment_id','actual_time').groupby('segment_id').agg(merge_segment).reset_index()\n",
-    "segment_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b948636b-9635-4354-9173-04f2f0bb40ef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bcd5354e-788e-488f-940e-9360cc1ee412",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b91aa6d8-d444-41a4-8aaf-89ffde08fe89",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "534ebe18-ffa8-4356-9025-1bc6c51cd9d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3af51717-e85c-4195-8258-1218e1b22cfb",
-   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -1364,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "d2e7b030-b3bd-4c4b-8cc3-c465077f953a",
    "metadata": {
     "tags": []
@@ -1385,22 +1346,18 @@
        "od_start_time                       0\n",
        "od_end_time                         0\n",
        "start_scan_to_end_scan              0\n",
-       "is_cutoff                           0\n",
-       "cutoff_factor                       0\n",
-       "cutoff_timestamp                    0\n",
        "actual_distance_to_destination      0\n",
        "actual_time                         0\n",
        "osrm_time                           0\n",
        "osrm_distance                       0\n",
-       "factor                              0\n",
        "segment_actual_time                 0\n",
        "segment_osrm_time                   0\n",
        "segment_osrm_distance               0\n",
-       "segment_factor                      0\n",
+       "segment_id                          0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,44 +1368,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "488285bb-efdb-4fe2-bff8-49e0e8146f09",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_19048\\843711855.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df['od_start_time'] =  pd.to_datetime(df['od_start_time'])\n"
-     ]
-    },
-    {
-     "ename": "DateParseError",
-     "evalue": "hour must be in 0..23: 47:45.2, at position 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\tslibs\\parsing.pyx:679\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.parsing.dateutil_parse\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: hour must be in 0..23",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mDateParseError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mod_start_time\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m  pd\u001b[38;5;241m.\u001b[39mto_datetime(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mod_start_time\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      2\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mod_end_time\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;241m=\u001b[39m  pd\u001b[38;5;241m.\u001b[39mto_datetime(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mod_end_time\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mod_start_time\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\tools\\datetimes.py:1046\u001b[0m, in \u001b[0;36mto_datetime\u001b[1;34m(arg, errors, dayfirst, yearfirst, utc, format, exact, unit, infer_datetime_format, origin, cache)\u001b[0m\n\u001b[0;32m   1044\u001b[0m             result \u001b[38;5;241m=\u001b[39m arg\u001b[38;5;241m.\u001b[39mtz_localize(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutc\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1045\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(arg, ABCSeries):\n\u001b[1;32m-> 1046\u001b[0m     cache_array \u001b[38;5;241m=\u001b[39m _maybe_cache(arg, \u001b[38;5;28mformat\u001b[39m, cache, convert_listlike)\n\u001b[0;32m   1047\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m cache_array\u001b[38;5;241m.\u001b[39mempty:\n\u001b[0;32m   1048\u001b[0m         result \u001b[38;5;241m=\u001b[39m arg\u001b[38;5;241m.\u001b[39mmap(cache_array)\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\tools\\datetimes.py:250\u001b[0m, in \u001b[0;36m_maybe_cache\u001b[1;34m(arg, format, cache, convert_listlike)\u001b[0m\n\u001b[0;32m    248\u001b[0m unique_dates \u001b[38;5;241m=\u001b[39m unique(arg)\n\u001b[0;32m    249\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(unique_dates) \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(arg):\n\u001b[1;32m--> 250\u001b[0m     cache_dates \u001b[38;5;241m=\u001b[39m convert_listlike(unique_dates, \u001b[38;5;28mformat\u001b[39m)\n\u001b[0;32m    251\u001b[0m     \u001b[38;5;66;03m# GH#45319\u001b[39;00m\n\u001b[0;32m    252\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\tools\\datetimes.py:455\u001b[0m, in \u001b[0;36m_convert_listlike_datetimes\u001b[1;34m(arg, format, name, utc, unit, errors, dayfirst, yearfirst, exact)\u001b[0m\n\u001b[0;32m    452\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mformat\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mformat\u001b[39m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmixed\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    453\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _array_strptime_with_fallback(arg, name, utc, \u001b[38;5;28mformat\u001b[39m, exact, errors)\n\u001b[1;32m--> 455\u001b[0m result, tz_parsed \u001b[38;5;241m=\u001b[39m objects_to_datetime64ns(\n\u001b[0;32m    456\u001b[0m     arg,\n\u001b[0;32m    457\u001b[0m     dayfirst\u001b[38;5;241m=\u001b[39mdayfirst,\n\u001b[0;32m    458\u001b[0m     yearfirst\u001b[38;5;241m=\u001b[39myearfirst,\n\u001b[0;32m    459\u001b[0m     utc\u001b[38;5;241m=\u001b[39mutc,\n\u001b[0;32m    460\u001b[0m     errors\u001b[38;5;241m=\u001b[39merrors,\n\u001b[0;32m    461\u001b[0m     allow_object\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m    462\u001b[0m )\n\u001b[0;32m    464\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m tz_parsed \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    465\u001b[0m     \u001b[38;5;66;03m# We can take a shortcut since the datetime64 numpy array\u001b[39;00m\n\u001b[0;32m    466\u001b[0m     \u001b[38;5;66;03m# is in UTC\u001b[39;00m\n\u001b[0;32m    467\u001b[0m     dta \u001b[38;5;241m=\u001b[39m DatetimeArray(result, dtype\u001b[38;5;241m=\u001b[39mtz_to_dtype(tz_parsed))\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\arrays\\datetimes.py:2177\u001b[0m, in \u001b[0;36mobjects_to_datetime64ns\u001b[1;34m(data, dayfirst, yearfirst, utc, errors, allow_object)\u001b[0m\n\u001b[0;32m   2174\u001b[0m \u001b[38;5;66;03m# if str-dtype, convert\u001b[39;00m\n\u001b[0;32m   2175\u001b[0m data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(data, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, dtype\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mobject_)\n\u001b[1;32m-> 2177\u001b[0m result, tz_parsed \u001b[38;5;241m=\u001b[39m tslib\u001b[38;5;241m.\u001b[39marray_to_datetime(\n\u001b[0;32m   2178\u001b[0m     data,\n\u001b[0;32m   2179\u001b[0m     errors\u001b[38;5;241m=\u001b[39merrors,\n\u001b[0;32m   2180\u001b[0m     utc\u001b[38;5;241m=\u001b[39mutc,\n\u001b[0;32m   2181\u001b[0m     dayfirst\u001b[38;5;241m=\u001b[39mdayfirst,\n\u001b[0;32m   2182\u001b[0m     yearfirst\u001b[38;5;241m=\u001b[39myearfirst,\n\u001b[0;32m   2183\u001b[0m )\n\u001b[0;32m   2185\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m tz_parsed \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   2186\u001b[0m     \u001b[38;5;66;03m# We can take a shortcut since the datetime64 numpy array\u001b[39;00m\n\u001b[0;32m   2187\u001b[0m     \u001b[38;5;66;03m#  is in UTC\u001b[39;00m\n\u001b[0;32m   2188\u001b[0m     \u001b[38;5;66;03m# Return i8 values to denote unix timestamps\u001b[39;00m\n\u001b[0;32m   2189\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mi8\u001b[39m\u001b[38;5;124m\"\u001b[39m), tz_parsed\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\tslib.pyx:402\u001b[0m, in \u001b[0;36mpandas._libs.tslib.array_to_datetime\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\tslib.pyx:551\u001b[0m, in \u001b[0;36mpandas._libs.tslib.array_to_datetime\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\tslib.pyx:516\u001b[0m, in \u001b[0;36mpandas._libs.tslib.array_to_datetime\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\tslibs\\conversion.pyx:557\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.conversion.convert_str_to_tsobject\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\tslibs\\parsing.pyx:329\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.parsing.parse_datetime_string\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\tslibs\\parsing.pyx:683\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.parsing.dateutil_parse\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mDateParseError\u001b[0m: hour must be in 0..23: 47:45.2, at position 1"
-     ]
+     "data": {
+      "text/plain": [
+       "0        2018-09-20 03:21:32.418600\n",
+       "1        2018-09-20 03:21:32.418600\n",
+       "2        2018-09-20 03:21:32.418600\n",
+       "3        2018-09-20 03:21:32.418600\n",
+       "4        2018-09-20 03:21:32.418600\n",
+       "                    ...            \n",
+       "144862   2018-09-20 16:24:28.436231\n",
+       "144863   2018-09-20 16:24:28.436231\n",
+       "144864   2018-09-20 16:24:28.436231\n",
+       "144865   2018-09-20 16:24:28.436231\n",
+       "144866   2018-09-20 16:24:28.436231\n",
+       "Name: od_start_time, Length: 144867, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1459,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "4defbc3f-232e-4480-8dc8-5e374fa86a2a",
    "metadata": {
     "tags": []
@@ -1468,21 +1413,21 @@
     {
      "data": {
       "text/plain": [
-       "0         35:36.5\n",
-       "1         35:36.5\n",
-       "2         35:36.5\n",
-       "3         35:36.5\n",
-       "4         35:36.5\n",
-       "           ...   \n",
-       "144862    24:28.4\n",
-       "144863    24:28.4\n",
-       "144864    24:28.4\n",
-       "144865    24:28.4\n",
-       "144866    24:28.4\n",
+       "0         2018-09-20 02:35:36.476840\n",
+       "1         2018-09-20 02:35:36.476840\n",
+       "2         2018-09-20 02:35:36.476840\n",
+       "3         2018-09-20 02:35:36.476840\n",
+       "4         2018-09-20 02:35:36.476840\n",
+       "                     ...            \n",
+       "144862    2018-09-20 16:24:28.436231\n",
+       "144863    2018-09-20 16:24:28.436231\n",
+       "144864    2018-09-20 16:24:28.436231\n",
+       "144865    2018-09-20 16:24:28.436231\n",
+       "144866    2018-09-20 16:24:28.436231\n",
        "Name: trip_creation_time, Length: 144867, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
